Reorganize groovy-math runtime packages and examples